tests/ui/does-not-have-iter-separated.stderr
error[E0308]: mismatched types
 --> $DIR/does-not-have-iter-separated.rs:4:5
  |
4 |     quote!(#(a b),*);
  |     ^^^^^^^^^^^^^^^^^
  |     |
  |     expected struct `quote::__rt::HasIterator`, found struct `quote::__rt::ThereIsNoIteratorInRepetition`
  |     expected due to this
  |
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
